WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262480
[GTK4] Disconnect surface monitor-leave signal on web view unroot
https://bugs.webkit.org/show_bug.cgi?id=262480
Summary
[GTK4] Disconnect surface monitor-leave signal on web view unroot
Carlos Garcia Campos
Reported
2023-10-02 05:37:22 PDT
I forgot to disconnect this one.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-10-02 05:38:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18493
EWS
Comment 2
2023-10-02 06:36:08 PDT
Committed
268725@main
(26433d6e73be): <
https://commits.webkit.org/268725@main
> Reviewed commits have been landed. Closing PR #18493 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug