[GTK4] Disconnect surface monitor-leave signal on web view unroot https://bugs.webkit.org/show_bug.cgi?id=262480

Reviewed by Michael Catanzaro.

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseUnroot):

Canonical link: https://commits.webkit.org/268725@main